--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="grph/js/d3-tip.js"></script>
     <script src="grph/js/grph.js"></script>
     <link href="grph/css/light.css" rel="stylesheet" type="text/css" />
+    <link href="css/statminer.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
 
