--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="grph/js/grph.js"></script>
     <link href="grph/css/light.css" rel="stylesheet" type="text/css" />
     <link href="css/statminer.css" rel="stylesheet" type="text/css" />
+    <link href="node_modules/react-select/dist/react-select.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
 
