--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script src="grph/js/d3-tip.js"></script>
     <script src="grph/js/grph.js"></script>
     <link href="grph/css/light.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="node_modules/react-virtualized/styles.css">
     <link href="node_modules/react-select/dist/react-select.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="node_modules/react-virtualized-select/styles.css">
     <link href="css/statminer.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
